--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <title>Солнечные батареи GreenCorp</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="FA/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
