--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
   </header>
   <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
     <div class="about__info animate__animated animate__fadeInLeft animate__repeat-1">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -138,5 +139,6 @@
     <div class="footer__copyright">GreenCorp © 2022</div>
   </footer>
   <script src="FA/css/all.min.css"></script>
+  <script src="js/canvas.js"></script>
 </body>
 </html>
